# blake3

./: mix.exs
config/: config.exs
lib/: blake3.ex
lib/blake3/: native.ex
native/blake3/: Cargo.toml
native/blake3/src/: lib.rs
