[package]
name = "blake3"
version = "0.3.3"
authors = ["Thomas Jean <thomas.jean486@gmail.com>"]

[features]
default = ["blake3/default"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]


[lib]
name = "blake3"
path = "src/lib.rs"
crate_type = ["cdylib"]

[dependencies]
rustler = ">=0.26.0"
rustler_codegen = ">=0.26.0"
bincode = ">=1.3.0"
blake3 = ">=1.3.1"
